# miette

./: .clog.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  README.tpl  cliff.toml  clippy.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
.helix/: languages.toml
examples/: serde_json.rs
miette-derive/: Cargo.toml
miette-derive/src/: code.rs  diagnostic.rs  diagnostic_arg.rs  diagnostic_source.rs  field_help.rs  fmt.rs  forward.rs  help.rs  label.rs  lib.rs  related.rs  severity.rs  snippets.rs  source_code.rs  trait_bounds.rs  url.rs  utils.rs
miette-derive/src/trait_bounds/: mock_store.rs  mod.rs  store.rs
miette-schema/: Cargo.toml  miette-json-schema.json
miette-schema/src/: lib.rs
src/: chain.rs  compile_test.rs  diagnostic_chain.rs  diagnostic_impls.rs  dynamic_diagnostic.rs  error.rs  handler.rs  lib.rs  macro_helpers.rs  miette_diagnostic.rs  named_source.rs  panic.rs  protocol.rs  reporter.rs  source_code.rs  source_impls.rs  typed_report.rs  utils.rs
src/eyreish/: context.rs  error.rs  into_diagnostic.rs  kind.rs  macros.rs  mod.rs  ptr.rs  wrapper.rs
src/handlers/: debug.rs  graphical.rs  json.rs  mod.rs  narratable.rs  theme.rs
src/highlighters/: blank.rs  mod.rs  syntect.rs
src/printer/: default_printer.rs  default_reporter.rs  graphical_printer.rs  mod.rs  narratable_printer.rs  theme.rs
src/reporter/: default_reporter.rs  mod.rs  theme.rs
tests/: color_format.rs  derive.rs  graphical.rs  narrated.rs  printer.rs  reporter.rs  test_autotrait.rs  test_blanket.rs  test_boxed.rs  test_chain.rs  test_context.rs  test_context_access.rs  test_convert.rs  test_derive_attr.rs  test_derive_collection.rs  test_derive_source_chain.rs  test_diagnostic_source_macro.rs  test_downcast.rs  test_fmt.rs  test_handler_access.rs  test_json.rs  test_location.rs  test_macros.rs  test_repr.rs  test_source.rs  typed_report.rs
tests/common/: mod.rs
tests/drop/: mod.rs
