[package]
name = "miette"
version = "1.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Fancy diagnostic reporting library and protocol for us mere mortals who aren't compiler hackers."
categories = ["rust-patterns"]
repository = "https://github.com/zkat/miette"
documentation = "https://docs.rs/miette"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
exclude = ["images/", "tests/", "miette-derive/"]

[dependencies]
thiserror = "1.0.26"
miette-derive = { version = "=1.1.0", path = "miette-derive" }
once_cell = "1.8.0"
owo-colors = "2.0.0"
atty = "0.2.14"
ci_info = "0.14.2"

[dev-dependencies]
semver = "1.0.4"

[workspace]
members = ["miette-derive"]
