[package]
name = "miette"
version = "2.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Fancy diagnostic reporting library and protocol for us mere mortals who aren't compiler hackers."
categories = ["rust-patterns"]
repository = "https://github.com/zkat/miette"
documentation = "https://docs.rs/miette"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
exclude = ["images/", "tests/", "miette-derive/"]

[dependencies]
thiserror = "1.0.26"
miette-derive = { path = "miette-derive", version = "=2.1.0"}
once_cell = "1.8.0"
owo-colors = "2.0.0"
atty = "0.2.14"
ci_info = "0.14.2"

[dev-dependencies]
semver = "1.0.4"

# Eyre devdeps
futures = { version = "0.3", default-features = false }
indenter = "0.3.0"
rustversion = "1.0"
trybuild = { version = "1.0.19", features = ["diff"] }
syn = { version = "1.0", features = ["full"] }

[workspace]
members = ["miette-derive"]
