[package]
name = "miette-derive"
version = "7.5.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
license = "Apache-2.0"
description = "Derive macros for miette. Like `thiserror` for Diagnostics."
repository = "https://github.com/zkat/miette"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.48"
